- Added endpoint for test-runs summary - Added required service, helper and tests
